# heredity

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
src/: cell.rs  fitness.rs  lib.rs  parameters.rs  run.rs  sim_result.rs  simulation.rs
tests/: full_loop.rs  mod.rs
