[package]
name = "heredity"
description = "A minimal genetic algorithm library."
license = "MIT"
version = "0.2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
snafu = "0.7"
